--- a/related.tex
+++ b/related.tex
@@ -6,11 +6,16 @@
 %We identify the most relevant related work in each of these areas below. 
 
 \Para{Aggregating congestion information} A recent proposal~\cite{fivecomps} observes that the majority of today's traffic is owned by a few entities.
-This observation implies that there are large bundles in practice, resulting in greater scheduling opportunities within a bundle. Note that the proposal uses its observation to highlight the benefits of sharing information across a given customer's traffic when configuring congestion control algorithms at the endhosts. This is orthogonal to our goal of scheduling such traffic by introducing a middlebox without modifying end hosts.
+This observation implies that there are large bundles in practice, resulting in greater scheduling opportunities within a bundle. 
+The proposal uses its observation to advocate sharing congestion information across a given domains endhosts. 
+This is orthogonal to our goal of scheduling such traffic by introducing a middlebox without modifying end hosts.
 
-\Para{Packet scheduling} There have been some recent efforts towards enabling the benefits of packet scheduling. PIFO~\cite{pifo} is a programmable priority queue that can be configured to express different scheduling policies at routers. However, not only does it require changing the in-network routers, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). UPS~\cite{ups} allows different scheduling policies to be expressed from the edge via header initialization, but also requires a change to the routers.
+\Para{Packet scheduling} There have been some recent efforts towards enabling the benefits of packet scheduling. Most are complementary with \name and could be used as its datapath.
+For example, PIFO~\cite{pifo} is a priority queue for programmable switching chips. 
+%However, not only does it require changing  in-network routers, but it also suffers from the issue of an ISP's limited visibility into the traffic to choose desired policies (and limited incentives to enforce them). 
+%UPS~\cite{ups} allows different scheduling policies to be expressed from the edge via header initialization, but also requires a change to the routers.
 %However, since queuing still occurs in the middle of the network, it relies on the customers targeting a common global objective, or on the network operators isolating different customers' traffic, both of which are difficult to realize. 
-\name provides a solution that does not require any cooperation from downstream networks in other organizations.
+%\name provides a solution that does not require any cooperation from downstream networks in other organizations.
 
 In that spirit, \name is closer to OverQoS~\cite{overqos}. Proposed more than a decade ago, OverQoS aimed to provide QoS benefits in the Internet by aggregating and managing traffic at the nodes of an already-deployed overlay network~\cite{ron}. 
 Given the aggregation opportunities today, where a few content providers generate a majority of the Internet traffic~\cite{fivecomps}, we observe that the time for reaping benefits from such designs may have arrived. 
