embiggen varying offered load plot

--- a/design.tex
+++ b/design.tex
@@ -128,6 +128,7 @@ We detail the congestion measurement strategy and contents of congestion ACKs in
 
 \begin{Appendix}
 \section{Nimbus}\label{s:app:nimbus}
+\input{varying-offered-load}
 
 We briefly summarize Nimbus~\cite{nimbus} for reference.
 
