--- a/varying-offered-load.tex
+++ b/varying-offered-load.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure*}[ht!]
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
@@ -7,7 +7,7 @@
 \end{knitrout}
     \caption{\name offers diminishing returns with lower amounts of offered load.}
     \label{fig:eval:offeredload}
-\end{figure}
+\end{figure*}
 %
 %\newcommand{\highUtilTailImprove}{round(highUtilTailImprove, 0)\%\xspace}
 %\newcommand{\medUtilTailImprove}{round(medUtilTailImprove, 0)\%\xspace}
