--- a/measure.tex
+++ b/measure.tex
@@ -65,7 +65,8 @@ The packet header subset that is used for identifying epoch boundaries must have
 
 We expect that the precise set of fields used will depend on specific deployment considerations.
 For example, in our prototype implementation (\S\ref{s:impl}) we use a header subset of the IPv4 IP ID field and destination IP and port. 
-We make this choice for simplicity; it does not require tunnelling mechanisms (and is thus easily deployable, and if \name fails connections are unaffected); we note that previous proposals~\cite{ip-traceback} have used IP ID for unique packet identification. 
+We make this choice for simplicity; it does not require tunnelling mechanisms and is thus easily deployable, and if \name fails connections are unaffected. 
+We note that previous proposals~\cite{ip-traceback} have used IP ID for unique packet identification. 
 The drawback of this approach is that it cannot be extended to IPv6.
 To support a wider set of scenarios, \name could use dedicated fields in an encapsulating header, analogous to AXE's ``deduplication filter''~\cite{axe}.
 %\radhika{can we cite something for schemes that have used this before?}
