--- a/queue-control.tex
+++ b/queue-control.tex
@@ -101,7 +101,7 @@ r_1 = \frac{-\beta + \sqrt{\beta^2 - 4\alpha}}{2}, r_2 = \frac{-\beta - \sqrt{\b
 \noindent We want: (1) the $r_1$, $r_2$ to be large, so the queue converges quickly, and (2) the pulse amplitude to be approximately the Nimbus pulse amplitude, so:
 
 \begin{equation}
-\frac{10\pi{}A}{|p(10\pi{}i)|} = \frac{A}{5\pi}
+\frac{10\pi{}A}{|p(10\pi{}i)|} \approx \frac{A}{5\pi}
 \end{equation}
 
 $\alpha = 10, \beta = 10$ satisfy these constraints.
